--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^21.0.3",
     "cypress": "^13.17.0",
     "cypress-mochawesome-reporter": "^3.8.2",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
     "mochawesome-report-generator": "^6.2.0"
+  },
+  "dependencies": {
+    "mocha": "^11.0.1"
   }
 }
